--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css?family=Nunito"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./css/main.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -24,10 +30,39 @@
   </head>
   <body>
     <div class="bg">
-      <div class="top-left"><img src="assets/home/logo.png"></div>
+      <div class="top-left"><img src="assets/home/logo.png" /></div>
+      <div class="top-right">
+        <div class="row">
+          <div class="column">
+            <p style="font-size: 20px">
+              <a href="index.html" style="color: #ffffff">Home</a>
+            </p>
+          </div>
+          <div class="column">
+            <p style="font-size: 20px">
+              <a href="views/about.html" style="color: #ffffff">About</a>
+            </p>
+          </div>
+          <div class="column">
+            <p style="font-size: 20px">
+              <a href="views/projects.html" style="color: #ffffff">Projects</a>
+            </p>
+          </div>
+          <div class="column">
+            <p style="font-size: 20px">
+              <a href="views/gallery.html" style="color: #ffffff">Gallery</a>
+            </p>
+          </div>
+          <div class="column">
+            <p style="font-size: 20px">
+              <a href="views/contact.html" style="color: #ffffff">Contact Us</a>
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="centered">
         <h4 style="color: rgb(255, 255, 255)"><center>I am</center></h4>
-        <h1>Sayan Nath</h1>
+        <h1><strong>Sayan Nath</strong></h1>
       </div>
     </div>
   </body>
